<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Simple Tea Timer</string>
    <string name="countdown_text_view">00:00.0</string>
    <string name="time_3min_button">3 min</string>
    <string name="time_5min_button">5 min</string>
    <string name="time_8min_button">8 min</string>
    <string name="time_10s_button">10 s</string>
    <string name="stop_timer_button">Stop</string>
    <string name="green_tea_text_view">Green</string>
    <string name="black_tea_text_view">Black</string>
    <string name="herbal_tea_text_view">Herbal</string>
    <string name="custom_tea_text_view">Custom</string>
    <string name="action_settings">Settings</string>

</resources>
