<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.marianlonga.teatimer.MainActivity" >

    <TextView
        android:id="@+id/countdownTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/countdown_text_view"
        android:gravity="center_horizontal"
        android:textSize="60sp"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/time5minButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/time3minButton"
        android:layout_alignBottom="@+id/time3minButton"
        android:layout_toRightOf="@+id/time3minButton"
        android:textSize="30sp"
        android:text="@string/time_5min_button" />

    <Button
        android:id="@+id/time8minButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/time5minButton"
        android:layout_alignBottom="@+id/time5minButton"
        android:layout_toRightOf="@+id/time5minButton"
        android:textSize="30sp"
        android:text="@string/time_8min_button" />

    <Button
        android:id="@+id/time3minButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/timerProgressBar"
        android:layout_below="@+id/countdownTextView"
        android:layout_marginTop="32dp"
        android:text="@string/time_3min_button"
        android:textSize="30sp" />

    <ProgressBar
        android:id="@+id/timerProgressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/countdownTextView"
        android:layout_below="@+id/countdownTextView"
        android:progressDrawable="@android:drawable/progress_horizontal"
        android:max="1000"
        android:progress="0"
        android:visibility="visible" />

    <Button
        android:id="@+id/stopTimerButton"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="25dp"
        android:text="@string/stop_timer_button" />

    <Button
        android:id="@+id/time10sButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/time5minButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="72dp"
        android:text="@string/time_10s_button" />

</RelativeLayout>
